--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <section>
                         <h2>O mnie</h2>
                         <p>
-                        Mam na imię <b>Bartłomiej</b>. W pracy dążę przede wszystkim do samodoskonalenia się i byciu coraz lepszym w tym co robię. Chcę posiąść całą wiedzę oraz praktykę w danym zakresie i dawać z Siebie jak najwięcej czerpiąc z tego satysfakcję.
+                        Mam na imię <b>Bartłomiej</b>. W pracy dążę przede wszystkim do samodoskonalenia i byciu coraz lepszym w tym co robię. Chcę posiąść całą wiedzę oraz praktykę w danym zakresie i dawać z Siebie jak najwięcej czerpiąc z tego satysfakcję.
                         </p>
                     </section>
                     <section>
@@ -57,36 +57,36 @@
                             <li>
                                 08.2023 - obecnie: 
                                 <a href="https://lodz.praca.gov.pl">Powiatowy Urząd Pracy</a>
-                                 - Stażysta
+                                 - Stażysta: Obsługa urządzeń biurowych, dbanie o prawidłowy przekaz korespondecji wewnętrznej, wysyłanie korespondencji poza urząd, archiwizacja.
                             </li>
                             <li>
                                 10.2021 - 03.2022: 
                                 <a href="https://www.splot-pas.com.pl">P.P.H.U. "SPLOT" PAWEŁ PRUCHNICKI</a>
-                                 - Snowacz
+                                 - Snowacz: Obsługa snowadła, snócie odpowiednich wzorów do następnej obróbki na krosnach.
                             </li>
                             <li>
                                 03.2020 - 10.2021: 
                                 <a href="https://flex.com/careers/poland">FLEXTRONICS LOGISTICS</a>
-                                 - Pracownik Magazynu
+                                 - Pracownik Magazynu: Obsługa skanera, paleciaka, wysyłka, zarządzanie marketem.
                             </li>
                             <li>
                                 04.2018 - 03.2020: 
                                 <a href="https://mcdonalds.pl">P.P.H.U. Aneta Czaplicka/Mc Donald's</a>
-                                 - Młodszy menadżer/kierownik zmiany
+                                 - Młodszy menadżer/kierownik zmiany: Prowadzenie zmiany, zarządzanie personelem, zamykanie i otwieranie dnia biznesowego, pakowanie depozytu, inwentaryzacja, obsługa frytury, grilla, tostera, maszyny do lodów i shake'ów oraz kasy.
                             </li>
                             <li>
                                 01.2017 - 02.2018: 
                                 <a href="http://www.twojabryka.pl">TWOJA BRYKA Krzysztof Ferraretto</a>
-                                 - Doradca d/s klienta
+                                 - Doradca d/s klienta: Wystawianie ofert na Allegro, obsługa klienta, dostawa akumulatorów oraz wysyłanie paczek.
                             </li>
                             <li>
                                 05.2016 - 11.2016:
-                                <a href="https://geoforum.pl/firma/5246/cadexpert-sp-z-o-o-">CADExpert Sp. z o. o.</a> - Operator systemów informatycznych
+                                <a href="https://geoforum.pl/firma/5246/cadexpert-sp-z-o-o-">CADExpert Sp. z o. o.</a> - Operator systemów informatycznych: Opisywanie sieci niskiego napięcia w specjalnym programie do tego przeznaczonym.
                             </li>
                             <li>
                                 10.2015 - 02.2016: 
                                 <a href="https://flex.com/careers/poland">Flextronics Logistics Poland Sp. z o. o.</a>
-                                 - Pracownik magazynu
+                                 - Pracownik magazynu: Obsługa skanera, paleciaka i zgrzewarki.
                             </li>
                         </ul>
                     </section>
@@ -94,7 +94,7 @@
                         <h2>Języki</h2>
                         <ul>
                             <li>Polski - Ojczysty</li>
-                            <li>Angielski - Średni</li>
+                            <li>Angielski - B1</li>
                         </ul>
                     </section>
                     <section>
