--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <header>
                     <img class="circle profile-picture" 
-                    src="default-avatar.png" 
+                    src="ja.png" 
                     alt="Zdjęcie profilowe do CV">
                     <div>
                         <h1>Bartłomiej Kapczyński</h1>
@@ -109,6 +109,20 @@
                                 2013-2015:
                                 <a href="https://www.47lo.pl">XLVII Liceum Ogólnokształcące</a> 
                                 w Zespole Szkół Ogólnokształcących nr 8 im. Stanisława Staszica w Łodzi
+                            </li>
+                        </ul>
+                        <h2>Kursy, szkolenia i certyfikaty</h2>
+                        <ul>
+                            <li>
+                                Securitum - OSINTowanie na żywo. Od strzępków informacji po namierzenie gniazda scamu.<br>
+                                Dodatkowe informacje: Analiza metadanych dokumentów. Poszukiwanie osób w Internecie na podstawie pseudonimu. Analiza źródeł internetowych oraz pozornie ukrytych treści stron internetowych. Wyszukiwanie miejsca pobytu osoby na podstawie śladów pozostawionych na zdjęciach. Korelacja informacji z mediów społecznościowych. Zagrożenia mogące wystąpić podczas poszukiwań w Internecie i sposób zachowania bezpieczeństwa operacji. Sejsa Q&A.
+                            </li>
+                            <li>
+                                Zespół Szkół i Placówek Oświatowych Nowoczesnych Technologii Województwa Łódzkiego w Łodzi - Kurs zawodowy technik programista.<br>
+                                Dodatkowe informacje: Kwalifikacja INF.03 - tworzenie i administrowanie stronami internetowymi. Tworzenie, administrowanie i użytkowanie relacyjnych baz danych. Programowanie aplikacji internetowych. Tworzenie i administrowanie systemami zarządzania treścią.
+                            </li>
+                            <li>
+                                Kurs prawa jazdy kategorii B.
                             </li>
                         </ul>
                     </section>
