--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <section>
                         <h2>O mnie</h2>
                         <p>
-                        Mam na imię <b>Bartłomiej</b>. W pracy dążę przede wszystkim do samodoskonalenia i byciu coraz lepszym w tym co robię. Chcę posiąść całą wiedzę oraz praktykę w danym zakresie i dawać z Siebie jak najwięcej czerpiąc z tego satysfakcję.
+                        Mam na imię <b>Bartłomiej</b>. W pracy dążę przede wszystkim do samodoskonalenia i bycia coraz lepszym w tym co robię. Chcę posiąść całą wiedzę oraz praktykę w danym zakresie i dawać z Siebie jak najwięcej czerpiąc z tego satysfakcję.
                         </p>
                     </section>
                     <section>
